--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,118 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-  }
+body {
+  margin: 0;
+}
 
 /****************   Nav Section **********************/
 nav {
-	
+  background-color: coral;
+  border-bottom: 2px solid blue;
+  display: flex;
+  justify-content: space-between;
 }
 
 /***********************  Footer Section   **************************/
 footer {
-	
+  background-color: coral;
+  border-top: 2px solid blue;
+  display: flex;
+  justify-content: center;
 }
 
 /*********** Splash Page ************************/
 header {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header h1 {
-  
+  font-family: "Montserrat";
+  font-size: larger;
+  color: green;
 }
 
 header img {
+  border-radius: 50%;
 }
 
 .address {
- 
+  justify-self: center;
 }
 
 .tagline {
-  
+  justify-self: center;
 }
 
 /************* Sections ********************/
-hr {
-
-}
+hr {}
 
 section h3 {
-  
+  font-family: "Montserrat";
+  color: blue;
 }
 
 section dl {
-  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 section ul {
-
+  list-style-type: none;
 }
 
 section a {
-
+  color: red;
+  text-decoration: none;
 }
 
 section a:hover {
+  color: blue;
 }
 
 /**************   Projects   *****************/
 .three-col {
-	
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
 }
 
 .card img {
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card {
-  
+  border: 2px solid black;
+  background-color: slategray;
+}
+
+.card h3 {
+  text-align: center;
 }
 
 /**************   Responsiveness   *****************/
 @media (max-width: 680px) {
-    nav {
-      
-    }
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .three-col {
-      
-    }
+  .three-col {
+    grid-template-columns: 1fr;
+  }
 }
 
 /**************   Contact Page   *****************/
 .one-col {
-
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 input {
-  
-
+  border-color: aqua;
 }
 
-textarea {
-   
-}
+textarea {}
